--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
 UNCHAINED_ENDPOINT=https://shop-test.unchained.rocks/graphql
+FRONTEND_URL=https://shop-test.unchained.rocks
+GRAPHQL_ENDPOINT=https://shop-test.unchained.rocks/graphql
